fix: Fixed one more case.

--- a/Web.config
+++ b/Web.config
@@ -11,9 +11,9 @@
     <services>
       <service name="TFTService.MainService" behaviorConfiguration="TFTServiceBehaviours">
         <!-- This endpoint is exposed at the base address provided by host: http://localhost/servicemodelsamples/service.svc -->
-        <endpoint address="" binding="wsHttpBinding" contract="TFTService.IMainService"/>
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="secureHttpBinding" contract="TFTService.IMainService"/>
         <!-- The mex endpoint is exposed at http://localhost/servicemodelsamples/service.svc/mex -->
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+        <endpoint address="mex" binding="mexHttpsBinding" contract="IMetadataExchange"/>
       </service>
     </services>
     <bindings>
